# databingding-MVP

./: CMakeLists.txt  Coding_and_principle.xls  README.md  dubuild.sh  proc-dumper
VoiceApplication/: settings.gradle
VoiceApplication/app/: build.gradle
VoiceApplication/app/src/androidTest/java/voice/example/com/myapplication/: ExampleInstrumentedTest.java
VoiceApplication/app/src/main/: AndroidManifest.xml
VoiceApplication/app/src/main/res/drawable/: age_select_bg.xml  anim_loading.xml  default_circle.xml  default_rectangle.xml  text_bg.xml  text_color_selector.xml
VoiceApplication/app/src/main/res/layout/: activity_main.xml  activity_main1.xml  content_main.xml  pop_window.xml  wheel_list.xml  wheel_list_item.xml
VoiceApplication/app/src/main/res/menu/: menu_main.xml
VoiceApplication/app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
VoiceApplication/gradle/wrapper/: gradle-wrapper.properties
VoiceApplication/memoryapplication/: build.gradle
VoiceApplication/memoryapplication/src/main/: AndroidManifest.xml
VoiceApplication/memoryapplication/src/main/res/layout/: activity_main.xml
VoiceApplication/memoryapplication/src/main/res/values/: strings.xml
jniProject/: CMakeCache.txt  CMakeLists.txt  Makefile  Test  cmake_install.cmake  dubuild.sh  install_manifest.txt
jniProject/include/: Base.h  String.h  android_log.h  sub.h
jniProject/include/jni/: jvm.h  record_jni_control.h
jniProject/main/: Base.cc  String.cc  Test.java  main  main.cc  record_jni_control.cc  record_jni_control.cc1  sub.cc
todoapp/: build.gradle  settings.gradle
todoapp/app/: build.gradle
todoapp/app/src/main/res/layout/: tasks_frag.xml
todoapp/appmvp/: README  build.gradle
todoapp/appmvp/src/main/: AndroidManifest.xml
todoapp/appmvp/src/main/java/com/example/mvp/: IActivityContract.java  MainActivity.java  MainModelImpl.java  MainPresenterImpl.java  SecondActivity.java  User.java
todoapp/appmvp/src/main/java/com/example/mvplib/: BaseMvp.java  BaseMvpActivity.java  BaseMvpFragment.java  BasePresenter.java  Model.java  Presenter.java  View.java
todoapp/appmvp/src/main/java/com/example/utils/: OkHttpHelper.java  TunerCommonUtil.java
todoapp/appmvp/src/main/res/layout/: activity_main.xml  fragment_blank.xml
todoapp/gradle/wrapper/: gradle-wrapper.properties
todoapp/myapplication/: build.gradle
todoapp/myapplication/src/main/: AndroidManifest.xml
todoapp/myapplication/src/main/res/layout/: activity_main.xml  activity_second.xml  rowlayout.xml
todoapp/myapplication/src/main/res/menu/: menu_main.xml
(+39 files in other folders)
